opa/onlycompositions/onlyxrdviacomposition-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: requirecomposition
  annotations:
    description: >-
      Disallows managed resource creation without going through composition
spec:
  crd:
    spec:
      names:
        kind: RequireComposition
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package requirecomposition

        # this is necessary since there are no way to match based on glob expressions within constrains.
        violation[{"msg": msg}] {
          not input.review.object.metadata.labels["crossplane.io/composite"]
          msg := "crossplane composition was not used not used"
        }
